# audio-extraction-analysis

./: .env.test  .gitignore  .secrets.baseline  CHANGELOG.md  README-PRODUCTION.md  README.md  TYPE_DESIGN_FIXES.md  TYPE_DESIGN_REVIEW.md  TYPE_DESIGN_SUMMARY.txt  benchmark_hash_cache.py  pyproject.toml  pytest.ini  run_tui.py  test_diskcache_wal.py  verify_streaming.py
.github/workflows/: e2e-testing.yml  pr-ci.yml  quality-gates.yml  release.yml  technical-debt.yml  test.yml
benchmarks/: benchmark_hash_cache.py  cache_benchmark.py
docs/: EVENT_STREAMING.md  PROVIDERS.md  TUI.md  TUI_IMPLEMENTATION_ROADMAP.md
docs/adrs/: 001-provider-factory-architecture.md  README.md
docs/api/: .gitkeep
docs/architecture/decisions/: .gitkeep
docs/archive/: TUI_PLAN_COMPLETED.md  TUI_USAGE_INTEGRATED.md
docs/development/: CONTRIBUTING.md
examples/: parakeet_example.py  test_parakeet.py
scripts/: analyze_dependencies.py  fix_uv_lock.sh  run_comprehensive_tests.py  run_e2e_local.sh  run_static_checks.sh  run_tests.sh  security_check.py
src/: cli.py  error_handlers.py
src/analysis/: concise_analyzer.py  full_analyzer.py
src/cache/: __init__.py  backends.py  common.py  compression.py  eviction.py  transcription_cache.py
src/config/: __init__.py
src/exceptions/: __init__.py
src/formatters/: markdown_formatter.py  templates.py
src/formatters/html/: __init__.py  dashboard_renderer.py
src/formatters/html/templates/: dashboard.html
src/models/: events.py  transcription.py
src/pipeline/: __init__.py  audio_pipeline.py  simple_pipeline.py
src/providers/: __init__.py  base.py  deepgram.py  deepgram_utils.py  elevenlabs.py  factory.py  mock.py  parakeet.py  provider_utils.py  whisper.py
src/services/: __init__.py  audio_extraction.py  audio_extraction_async.py  ffmpeg_core.py  transcription.py  url_ingestion.py
src/ui/: console.py  wizard.py
src/ui/tui/: __init__.py  app.py  events.py  persistence.py  state.py  themes.py
src/ui/tui/services/: __init__.py  health_service.py  os_open.py  run_service.py
src/ui/tui/styles/: theme.tcss
src/ui/tui/views/: __init__.py  config.py  help.py  home.py  run.py  theme_selector.py  url_downloads.py
src/ui/tui/widgets/: __init__.py  filtered_tree.py  health_panel.py  log_panel.py  progress_board.py
src/utils/: __init__.py  ffmpeg_utils.py  file_validation.py  logger.py  logging_factory.py  paths.py  retry.py  retry_legacy.py  retry_tenacity.py  sanitization.py  secure_temp.py
tests/: __init__.py  cache_functionality_test.py  conftest.py  conftest_helpers.py  test_security.py
tests/benchmarks/: .gitkeep  benchmark_eviction.py  test_benchmark_hash_cache.py
tests/cache/: cache_functionality_test.py  test_benchmark_hash_cache.py  test_cache_benchmark.py  test_cache_contracts.py  test_eviction.py  test_file_hash_cache.py
tests/e2e/: __init__.py  base.py  monitoring.py  run_e2e_tests.py  test_cli_integration.py  test_data_manager.py  test_performance.py  test_provider_integration.py  test_run_e2e_tests.py  test_security.py  test_tui_integration.py
tests/integration/: test_async_workflows.py  test_cli_integration.py  test_error_recovery.py  test_ffmpeg_errors.py  test_ffmpeg_integration.py  test_performance_benchmarks.py  test_pipeline_error_handling.py
tests/manual/: test_jsonl_streaming.py
tests/mocks/: api_mocks.py
tests/security/: .gitkeep  security_fix_test.py
tests/unit/: conftest.py  test_analysis_init.py  test_async_audio_extraction.py  test_audio_extraction.py  test_cli.py  test_cli_error_handlers.py  test_common_validation.py  test_concise_analyzer.py  test_config_init.py  test_config_validate.py  test_deepgram_provider.py  test_deepgram_utils.py  test_elevenlabs_transcriber.py  test_events.py  test_exceptions.py  test_ffmpeg_core.py  test_ffmpeg_utils.py  test_formatters_init.py  test_full_analyzer.py  test_init.py  test_logger.py  test_logging_factory.py  test_parakeet_provider.py  test_paths_utils.py  test_pipeline_init.py  test_pipeline_progress.py  test_provider_factory.py  test_provider_utils.py  test_providers_init.py  test_retry.py  test_sanitization.py  test_transcription_service.py  test_tui_config_screen.py  test_tui_event_consumer.py  test_tui_health_service.py  test_tui_home_screen.py  test_tui_os_open.py  test_tui_persistence.py  test_tui_run_screen.py  test_tui_run_service.py  (+8 more)
tests/verification/: .gitkeep  verify_streaming.py
tools/: .gitkeep
typings/deepgram/: __init__.pyi
typings/dotenv/: __init__.pyi
typings/nemo/: __init__.pyi
typings/nemo/collections/: __init__.pyi  asr.pyi
typings/tenacity/: __init__.pyi
typings/torch/: __init__.pyi
typings/whisper/: __init__.pyi
