[project]
name = "audio-extraction-analysis"
version = "2.0.0"
description = "Audio extraction and transcription analysis tool with multiple providers (Deepgram, ElevenLabs)"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "deepgram-sdk>=5.3.0",
    "elevenlabs>=2.23.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "pydantic>=2.12.4",
    "networkx>=3.5",
    "yt-dlp>=2025.11.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "black>=25.11.0",
    "ruff>=0.14.5",
    "pre-commit>=4.4.0",
    "bandit>=1.8.6",
    "pip-audit>=2.9.0",
    "detect-secrets>=1.5.0",
    "import-linter>=2.6",
    "responses>=0.25.8",
    "radon>=6.0.1",
    "vulture>=2.14",
    "build>=1.3.0",
    "twine>=6.2.0",
]

parakeet = [
    "nemo-toolkit[asr]>=2.5.3",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "tensorboard>=2.20.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "pytorch-lightning>=2.5.6",
    "webdataset>=1.0.2",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
]

yaml = [
    "PyYAML>=6.0.3",
]

redis = [
    "redis>=7.0.1",
]

tui = [
    "textual>=6.6.0",
    "platformdirs>=4.5.0",
]

[project.urls]
Homepage = "https://github.com/edlsh/audio-extraction-analysis"
Repository = "https://github.com/edlsh/audio-extraction-analysis.git"
Documentation = "https://github.com/edlsh/audio-extraction-analysis#readme"
"Bug Tracker" = "https://github.com/edlsh/audio-extraction-analysis/issues"

[project.scripts]
audio-extraction-analysis = "src.cli:main"
audio-extraction = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py311"
preview = true

# Exclude a variety of commonly ignored directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = ["E","F","I","UP","N","B","S","RUF","ANN"]
ignore = [
  "S101",  # asserts allowed in tests
  "S102",  # exec-builtin (used in tests for dynamic imports)
  "S108",  # hardcoded-temp-file (acceptable in tests)
  "S110",  # try-except-pass (acceptable in cleanup code)
  "S311",  # suspicious-non-cryptographic-random-usage (not used for crypto)
  "S404",  # subprocess module import (used safely in controlled contexts)
  "S602",  # subprocess-popen-with-shell-equals-true (careful usage in scripts)
  "S603",  # subprocess-without-shell-equals-true (acceptable in scripts)
  "S607",  # start-process-with-partial-path (system binaries like pytest)
  "S608",  # hardcoded-sql-expression (not actual SQL injection risk)
  "B023",  # function-uses-loop-variable (acceptable pattern in tests)
  "B904",  # raise-without-from-inside-except (acceptable in some contexts)
  "B018",  # useless-expression (false positive in some test patterns)
  "N802",  # invalid-function-name (Config properties for compatibility)
  "N806",  # non-lowercase-variable-in-function (acceptable for type names)
  "N812",  # lowercase-imported-as-non-lowercase (acceptable for compatibility)
  "N817",  # camelcase-imported-as-acronym (acceptable for common abbreviations)
  "E402",  # module-import-not-at-top-of-file (required for some lazy imports)
  "E501",  # line-too-long (handled by black, remaining are test data/strings)
  "F401",  # unused-import (many are for availability checks, not actual imports)
  "F821",  # undefined-name (false positives in dynamic contexts)
  "RUF012", # mutable-class-default (acceptable with dataclasses)
  "RUF029", # async function without await (acceptable for test mocks)
  "RUF034", # useless-if-else (false positive)
  "ANN401", # any-type - acceptable for interfacing with untyped libraries
  "ANN201", # missing return type for public functions (mostly test methods - too noisy)
  "ANN204", # missing return type for __init__ methods (__init__ returns None implicitly)
  "ANN001", # missing type annotation for function arguments (test fixtures - too strict)
  "ANN202", # missing return type for private functions (less critical than public APIs)
  "ANN003", # missing type annotation for **kwargs (often too verbose for **kwargs)
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Path is used at runtime in these files (not just type annotations)
"src/cache/transcription_cache.py" = ["TC003"]  # Path used in file operations
"src/providers/whisper.py" = ["TC003"]  # Path used in file operations
"src/services/audio_extraction_async.py" = ["TC003"]  # Path used in file operations
# Event is used at runtime in state.py (accessing event.type, event.stage, etc.)
"src/ui/tui/state.py" = ["TC001"]  # Event used at runtime, not just type annotation
# TUI files: __init__ and __del__ methods return None implicitly
"src/ui/tui/**/*.py" = ["ANN204"]  # __init__/__del__ return None implicitly
# Test files can use additional patterns
"tests/**/*.py" = [
    "S101",  # asserts are standard in tests
    "ANN001",  # test fixtures often intentionally untyped
    "ANN002",  # *args in test mocks/helpers often intentionally untyped
    "ANN003",  # **kwargs in test helpers often intentionally untyped
    "ANN201",  # test methods don't need return type annotations
    "ANN202",  # private test helper functions less critical
    "ANN204",  # __init__ methods in test classes return None implicitly
    "ANN206",  # setup_class methods always return None (redundant annotation)
]
# Benchmark files use Any for comparison functions
"tests/benchmarks/**/*.py" = [
    "ANN401",  # typing.Any used intentionally for backend comparison functions
]

[tool.pytest.ini_options]
minversion = "8.0"

# Default test profile: Fast unit tests only
# Override with: pytest -m "integration" for integration tests
addopts = [
    "-ra",  # Show summary of all test outcomes
    "-q",   # Quiet output
    "--strict-markers",  # Fail on unknown markers
    "--strict-config",   # Fail on configuration warnings
    "-m",
    "not e2e and not integration and not benchmark and not network and not slow and not parakeet and not ffmpeg",
]

testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "strict"

# Test categorization markers
markers = [
    # Speed categories
    "slow: Tests that take longer than 5 seconds (deselect with '-m \"not slow\"')",
    "fast: Quick unit tests (under 1 second)",
    
    # Scope categories  
    "unit: Unit tests (isolated, no external dependencies)",
    "integration: Integration tests requiring external tools or services",
    "e2e: End-to-end tests requiring full environment",
    "benchmark: Performance benchmark tests",
    
    # Dependency requirements
    "ffmpeg: Tests requiring FFmpeg to be installed",
    "parakeet: Tests requiring Parakeet/NeMo dependencies (optional)",
    "whisper: Tests requiring Whisper dependencies (optional)",
    "network: Tests requiring network connectivity (external APIs)",
    "redis: Tests requiring Redis server",
    
    # Provider-specific
    "providers: Tests requiring provider API keys or credentials",
    "deepgram: Tests specific to Deepgram provider",
    "elevenlabs: Tests specific to ElevenLabs provider",
    
    # Special categories
    "security: Security and vulnerability tests",
    "mock: Tests using mocked dependencies",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "tests/*",
    "**/__pycache__/*",
    "**/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

ignore_errors = true

[tool.coverage.html]
directory = "htmlcov"

[tool.importlinter]
root_package = "src"

[[tool.importlinter.contracts]]
name = "Layered architecture: CLI should not import from providers"
type = "layers"
layers = [
    "src.cli",
    "src.services",
    "src.providers",
]

[[tool.importlinter.contracts]]
name = "Config independence"
type = "independence"
modules = [
    "src.config",
]

[[tool.importlinter.contracts]]
name = "No circular imports in utils"
type = "independence"
modules = [
    "src.utils",
]

[[tool.importlinter.contracts]]
name = "TUI must not import CLI"
type = "forbidden"
source_modules = [
    "src.ui.tui",
]
forbidden_modules = [
    "src.cli",
]

[[tool.importlinter.contracts]]
name = "TUI uses provider factory only"
type = "layers"
layers = [
    "src.ui.tui",
    "src.providers.factory",
]
