[project]
name = "audio-extraction-analysis"
version = "2.0.0"
description = "Audio extraction and transcription analysis tool with multiple providers (Deepgram, ElevenLabs)"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "deepgram-sdk>=5.3.0",  # Latest stable version
    "elevenlabs>=2.23.0",   # Current stable - will update when 2.30.1 available
    "python-dotenv>=1.2.1", # Current stable
    "rich>=14.2.0",         # Current stable  
    "pydantic>=2.12.4",     # Current stable
    "networkx>=3.5",        # Current stable
    "tenacity>=9.0.0",      # Retry library with exponential backoff
    "yt-dlp>=2025.11.12",   # Latest available
    "jinja2>=3.1.0",        # Template engine for HTML dashboard
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "black>=25.11.0",
    "ruff>=0.14.5",
    "mypy>=1.7.0",  # Type checking
    "pre-commit>=4.4.0",
    "bandit>=1.8.6",
    "pip-audit>=2.9.0",
    "detect-secrets>=1.5.0",
    "import-linter>=2.6",
    "responses>=0.25.8",
    "radon>=6.0.1",
    "vulture>=2.14",
    "build>=1.3.0",
    "twine>=6.2.0",
]

parakeet = [
    "nemo-toolkit[asr]>=2.5.3",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "tensorboard>=2.20.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "pytorch-lightning>=2.5.6",
    "webdataset>=1.0.2",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
]

yaml = [
    "PyYAML>=6.0.3",
]

redis = [
    "redis>=7.0.1",
]

tui = [
    "textual>=6.6.0",
    "platformdirs>=4.5.0",
]

[project.urls]
Homepage = "https://github.com/edlsh/audio-extraction-analysis"
Repository = "https://github.com/edlsh/audio-extraction-analysis.git"
Documentation = "https://github.com/edlsh/audio-extraction-analysis#readme"
"Bug Tracker" = "https://github.com/edlsh/audio-extraction-analysis/issues"

[project.scripts]
audio-extraction-analysis = "src.cli:main"
audio-extraction = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py311"
preview = true

# Exclude a variety of commonly ignored directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = ["E","F","I","UP","N","B","S","RUF","ANN"]
ignore = [
  "S101",  # asserts allowed in tests
  "S102",  # exec-builtin (used in tests for dynamic imports)
  "S108",  # hardcoded-temp-file (acceptable in tests)
  "S110",  # try-except-pass (acceptable in cleanup code)
  "S311",  # suspicious-non-cryptographic-random-usage (not used for crypto)
  "S404",  # subprocess module import (used safely in controlled contexts)
  "S602",  # subprocess-popen-with-shell-equals-true (careful usage in scripts)
  "S603",  # subprocess-without-shell-equals-true (acceptable in scripts)
  "S607",  # start-process-with-partial-path (system binaries like pytest)
  "S608",  # hardcoded-sql-expression (not actual SQL injection risk)
  "B023",  # function-uses-loop-variable (acceptable pattern in tests)
  "B904",  # raise-without-from-inside-except (acceptable in some contexts)
  "B018",  # useless-expression (false positive in some test patterns)
  "N802",  # invalid-function-name (Config properties for compatibility)
  "N806",  # non-lowercase-variable-in-function (acceptable for type names)
  "N812",  # lowercase-imported-as-non-lowercase (acceptable for compatibility)
  "N817",  # camelcase-imported-as-acronym (acceptable for common abbreviations)
  "E402",  # module-import-not-at-top-of-file (required for some lazy imports)
  "E501",  # line-too-long (handled by black, remaining are test data/strings)
  "F401",  # unused-import (many are for availability checks, not actual imports)
  "F821",  # undefined-name (false positives in dynamic contexts)
  "RUF012", # mutable-class-default (acceptable with dataclasses)
  "RUF029", # async function without await (acceptable for test mocks)
  "RUF034", # useless-if-else (false positive)
  "ANN401", # any-type - acceptable for interfacing with untyped libraries
  "ANN201", # missing return type for public functions (mostly test methods - too noisy)
  "ANN204", # missing return type for __init__ methods (__init__ returns None implicitly)
  "ANN001", # missing type annotation for function arguments (test fixtures - too strict)
  "ANN202", # missing return type for private functions (less critical than public APIs)
  "ANN003", # missing type annotation for **kwargs (often too verbose for **kwargs)
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Path is used at runtime in these files (not just type annotations)
"src/cache/transcription_cache.py" = ["TC003"]  # Path used in file operations
"src/providers/whisper.py" = ["TC003"]  # Path used in file operations
"src/services/audio_extraction_async.py" = ["TC003"]  # Path used in file operations
# Event is used at runtime in state.py (accessing event.type, event.stage, etc.)
"src/ui/tui/state.py" = ["TC001"]  # Event used at runtime, not just type annotation
# Test files can use additional patterns
"tests/**/*.py" = [
    "S101",  # asserts are standard in tests
    "ANN001",  # test fixtures often intentionally untyped
    "ANN002",  # *args in test mocks/helpers often intentionally untyped
    "ANN003",  # **kwargs in test helpers often intentionally untyped
    "ANN201",  # test methods don't need return type annotations
    "ANN202",  # private test helper functions less critical
    "ANN204",  # __init__ methods in test classes return None implicitly
    "ANN206",  # setup_class methods always return None (redundant annotation)
]
# Benchmark files use Any for comparison functions
"tests/benchmarks/**/*.py" = [
    "ANN401",  # typing.Any used intentionally for backend comparison functions
]

[tool.pytest.ini_options]
minversion = "8.0"

# Default test profile: Fast unit tests only
# Override with: pytest -m "integration" for integration tests
addopts = [
    "-ra",  # Show summary of all test outcomes
    "-q",   # Quiet output
    "--strict-markers",  # Fail on unknown markers
    "--strict-config",   # Fail on configuration warnings
    "-m",
    "not e2e and not integration and not benchmark and not network and not slow and not parakeet and not ffmpeg",
]

testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "strict"

# Test categorization markers
markers = [
    # Speed categories
    "slow: Tests that take longer than 5 seconds (deselect with '-m \"not slow\"')",
    "fast: Quick unit tests (under 1 second)",
    
    # Scope categories  
    "unit: Unit tests (isolated, no external dependencies)",
    "integration: Integration tests requiring external tools or services",
    "e2e: End-to-end tests requiring full environment",
    "benchmark: Performance benchmark tests",
    
    # Dependency requirements
    "ffmpeg: Tests requiring FFmpeg to be installed",
    "parakeet: Tests requiring Parakeet/NeMo dependencies (optional)",
    "whisper: Tests requiring Whisper dependencies (optional)",
    "network: Tests requiring network connectivity (external APIs)",
    "redis: Tests requiring Redis server",
    
    # Provider-specific
    "providers: Tests requiring provider API keys or credentials",
    "deepgram: Tests specific to Deepgram provider",
    "elevenlabs: Tests specific to ElevenLabs provider",
    
    # Special categories
    "security: Security and vulnerability tests",
    "mock: Tests using mocked dependencies",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "tests/*",
    "**/__pycache__/*",
    "**/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

ignore_errors = true

[tool.coverage.html]
directory = "htmlcov"

[tool.importlinter]
root_package = "src"

[[tool.importlinter.contracts]]
name = "Layered architecture: CLI should not import from providers"
type = "layers"
layers = [
    "src.cli",
    "src.services",
    "src.providers",
]

[[tool.importlinter.contracts]]
name = "Config independence"
type = "independence"
modules = [
    "src.config",
]

[tool.mypy]
python_version = "3.11"
mypy_path = "typings"
namespace_packages = true
explicit_package_bases = true

# Phase 4: Strict mode enabled
# This enables all recommended type safety checks
strict = true

# Error messages
show_error_codes = true
show_column_numbers = true
pretty = true
color_output = true

# Per-module overrides for external libraries
[[tool.mypy.overrides]]
module = [
    "whisper.*",
    "torch.*",
    "torchaudio.*",
]
ignore_missing_imports = false  # We have stubs now

[[tool.mypy.overrides]]
module = [
    "deepgram.*",
]
ignore_missing_imports = false  # We have stubs now

[[tool.mypy.overrides]]
module = [
    "nemo.*",
    "elevenlabs.*",
    "yt_dlp.*",
    "platformdirs.*",
    "textual.*",
    "rich.*",
    "tenacity.*",
    "librosa.*",
    "soundfile.*",
    "jinja2.*",
]
ignore_missing_imports = true  # No stubs yet

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
warn_return_any = false

# UI modules: Optional features with incomplete library stubs (Textual, Rich)
# Relaxed rules until comprehensive stubs are available
# Strategy: Focus strict type checking on core transcription logic only
[[tool.mypy.overrides]]
module = [
    "src.ui.tui.*",
    "src.ui.wizard",
    "src.ui.console",
    "src.cli",
]
disallow_untyped_defs = false
disallow_any_generics = false  
disallow_subclassing_any = false
disallow_untyped_calls = false
warn_return_any = false
disable_error_code = ["attr-defined", "assignment", "arg-type", "union-attr", "misc", "override", "dict-item", "list-item", "operator", "name-defined", "index", "return", "syntax", "unused-ignore", "return-value", "no-untyped-def"]

# Deprecated pipeline: Skip type checking to focus on active code
[[tool.mypy.overrides]]
module = "src.pipeline.audio_pipeline"
ignore_errors = true

# Whisper provider: Complex optional dependency with incomplete stubs
[[tool.mypy.overrides]]
module = "src.providers.whisper"
disallow_untyped_defs = false
disallow_any_generics = false
warn_return_any = false
disallow_untyped_calls = false
disable_error_code = ["import-not-found", "import-untyped", "func-returns-value", "union-attr", "attr-defined", "arg-type", "return-value"]

# Parakeet provider: Complex optional dependency with PyTorch stub issues
[[tool.mypy.overrides]]
module = "src.providers.parakeet"
disallow_untyped_defs = false
disallow_any_generics = false
warn_return_any = false
disallow_untyped_calls = false
disable_error_code = ["attr-defined", "arg-type", "assignment", "no-any-return", "var-annotated", "has-type", "union-attr", "import-not-found", "import-untyped"]

# Deepgram provider: API response handling with dynamic types
[[tool.mypy.overrides]]
module = "src.providers.deepgram"
disallow_untyped_defs = false
disallow_any_generics = false
warn_return_any = false
disallow_untyped_calls = false
disable_error_code = ["assignment", "arg-type", "union-attr", "no-any-return", "misc", "index", "call-arg"]

# Mock provider: Test-focused provider with flexible types
[[tool.mypy.overrides]]
module = "src.providers.mock"
disallow_untyped_defs = false
disallow_any_generics = false
warn_return_any = false
disallow_untyped_calls = false
disable_error_code = ["assignment", "arg-type", "union-attr", "list-item", "dict-item"]

# Models/Events: Event handling with dynamic payloads
[[tool.mypy.overrides]]
module = "src.models.events"
disallow_untyped_defs = false
disallow_any_generics = false
warn_return_any = false
disable_error_code = ["assignment", "arg-type", "union-attr", "misc"]

# Pipeline: Complex orchestration with dynamic configuration
[[tool.mypy.overrides]]
module = "src.pipeline.simple_pipeline"
disallow_untyped_defs = false
disallow_any_generics = false
warn_return_any = false
disallow_untyped_calls = false
disable_error_code = ["assignment", "arg-type", "union-attr", "var-annotated", "misc", "attr-defined", "no-any-return", "index"]

[[tool.importlinter.contracts]]
name = "No circular imports in utils"
type = "independence"
modules = [
    "src.utils",
]

[[tool.importlinter.contracts]]
name = "TUI must not import CLI"
type = "forbidden"
source_modules = [
    "src.ui.tui",
]
forbidden_modules = [
    "src.cli",
]

[[tool.importlinter.contracts]]
name = "TUI uses provider factory only"
type = "layers"
layers = [
    "src.ui.tui",
    "src.providers.factory",
]
